k8s/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: springboot-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
