k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /service1/(.*)
            backend:
              service:
                name: hello-service
                port:
                  number: 8080

# /service1/hello/somkiat  => /hello/somkiat
